--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Exo+2:ital,wght@1,400;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+KR:wght@400;500&display=swap" rel="stylesheet">
     
-    <title>개발자 안진형입니다.</title>
+    <title>프론트엔드개발자 안진형.</title>
   </head>
   <body>
     <div id="root"></div>
