--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- Google fonts     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Exo+2:ital,wght@1,400;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+KR:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Exo+2:ital,wght@1,400;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lemon&family=Noto+Serif+KR:wght@400;500&display=swap" rel="stylesheet">
+    
     
     <title>프론트엔드개발자 안진형.</title>
   </head>
